--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 </head>
 
 <body>
-	<h1>Todo</h1>
+	<header>
+		<h1>Todo</h1>
+	</header>
+	<main>
+		<p>Buy eggs from supermarket.</p>
+		<p>Finish Code Of Conduct training on campus.</p>
+		<p>Finish day 15 part 2 of Advent of Code problem.</p>
+		<p>Fill timesheet.</p>
+	</main>
 </body>
 
 </html>
