--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
 	<title>Todo Tasks</title>
+	<script src="./index.js"></script>
 </head>
 
 <body>
@@ -9,10 +10,12 @@
 		<h1>Todo</h1>
 	</header>
 	<main>
-		<p>Buy eggs from supermarket.</p>
-		<p>Finish Code Of Conduct training on campus.</p>
-		<p>Finish day 15 part 2 of Advent of Code problem.</p>
-		<p>Fill timesheet.</p>
+		<section id="todo-list">
+			<p>Buy eggs from supermarket.</p>
+			<p>Finish Code Of Conduct training on campus.</p>
+			<p>Finish day 15 part 2 of Advent of Code problem.</p>
+			<p>Fill timesheet.</p>
+		</section>
 	</main>
 </body>
 
