Add input text and button in html, initial phase

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<h1>Todo</h1>
 	</header>
 	<main>
+		<section>
+			<input type="text" id="new-task" placeholder="Task details">
+			<input type="button" value="Add Task">
+		</section>
 		<section id="todo-list">
-			<p>Buy eggs from supermarket.</p>
-			<p>Finish Code Of Conduct training on campus.</p>
-			<p>Finish day 15 part 2 of Advent of Code problem.</p>
-			<p>Fill timesheet.</p>
 		</section>
 	</main>
 </body>
