--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Todo Tasks</title>
 	<script src="./index.js"></script>
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -11,11 +12,11 @@
 	</header>
 
 	<main>
-		<section>
-			<input type="text" id="new-task" placeholder="Task details">
-			<input type="button" value="Add Task">
+		<section id="input-section">
+			<input type="text" id="task-details" placeholder="Task details">
+			<input type="button" value="Add Task" id="add-task">
 		</section>
-		
+
 		<section id="todo-list">
 		</section>
 	</main>
