Update css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<header>
+	<header class="heading">
 		<h1>Todo</h1>
 	</header>
 
@@ -18,6 +18,13 @@
 		</section>
 
 		<section id="todo-list">
+		<p>	Buy eggs from supermarket.</p>
+			
+		<p>	Finish Code Of Conduct training on campus.</p>
+			
+		<p>	Finish day 15 part 2 of Advent of Code problem.</p>
+			
+		<p>	Fill timesheet.</p>
 		</section>
 	</main>
 </body>
