Renamed readTask to readTaskAndRemoveValue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<input type="button" value="Add Task" id="add-task">
 		</section>
 
-		<section id="todo-list">
+		<section id="todo-list" class="task-list">
 		</section>
 	</main>
 </body>
