Add: css style for index.html, indented js file

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-	<header class="heading">
+	<header class="flex">
 		<h1>Todo</h1>
 	</header>
 
-	<main>
-		<section id="input-section">
-			<input type="text" id="task-details" placeholder="Task details">
-			<input type="button" value="Add Task" id="add-task">
+	<main class="flex">
+		<section id="input-section" class="flex">
+			<input type="text" id="task-details" placeholder="Task details" class="input">
+			<input type="button" value="Add Task" id="add-task" class="input">
 		</section>
 
-		<section id="todo-list" class="task-list">
+		<section id="todo-list" class="task-list flex">
 		</section>
 	</main>
 </body>
