--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
 	<title>Todo Tasks</title>
-	<script src="./index.js"></script>
-	<link rel="stylesheet" href="index.css">
+	<script src="./task-setup.js"></script>
+	<link rel="stylesheet" href="task-style.css">
 </head>
 
 <body>
