Rename task-setup.js to todo-task.js, getTodoContainer, getAddTaskElement, getTaskDetailElement

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Todo Tasks</title>
-	<script src="./task-setup.js"></script>
+	<script src="./todo-task.js"></script>
 	<link rel="stylesheet" href="task-style.css">
 </head>
 
