Add: sort button in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<section id="input-section" class="flex">
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
+			<input type="button" value="Sort A-Z" id="sort-alphabetical" class="input">
 		</section>
 
 		<section id="todo-list" class="task-list flex">
