Add paragraph element, which shows sort status

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
 			<input type="button" value="Sort A-Z" id="sort-button" class="input">
+			<p>Sort: Alphabetical</p>
 		</section>
-
+		
 		<section id="todo-list" class="task-list flex">
 		</section>
 	</main>
