--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
 			<input type="button" value="Sort A-Z" id="sort-button" class="input">
-			<p>Sort: Alphabetical</p>
+			<input type="button" value="Sort: Added" id="sort-added-button" class="input">
+			<p>Sorted By: Alphabetical</p>
 		</section>
 		
 		<section id="todo-list" class="task-list flex">
