--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			<input type="button" value="Add Task" id="add-task" class="input">
 			<input type="button" value="Sort A-Z" id="sort-button" class="input">
 			<input type="button" value="Sort: Added" id="sort-by-added" class="input">
-			<p>Sorted By: Alphabetical</p>
+			<p>Sorted By:</p>
+			<p id="sort-status">Added</p>
 		</section>
 		
 		<section id="todo-list" class="task-list flex">
