Add: remove value from taskDetails in the end of createTask

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		<section id="input-section" class="flex">
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
-			<input type="button" value="Sort A-Z" id="sort-button" class="input">
-			<input type="button" value="Sort: Added" id="sort-by-added" class="input">
+			<input type="button" value="Sort By: A-Z" id="sort-button" class="input">
+			<input type="button" value="Sort By: Added" id="sort-by-added" class="input">
+			<input type="button" value="Sort By: Completion" id="sort-by-completion" class="input">
 			<p>Sorted By:</p>
 			<p id="sort-status">Added</p>
 		</section>
