Replace: section to article, update TODO

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<p id="sort-status">Added</p>
 		</section>
 		
-		<section id="todo-list" class="task-list flex">
-		</section>
+		<article id="todo-list" class="task-list flex">
+		</article>
 	</main>
 </body>
 
