--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
 			<input type="button" value="Sort By: A-Z" id="sort-button" class="input">
-			<input type="button" value="Sort By: Added" id="sort-by-added" class="input">
-			<input type="button" value="Sort By: Completion" id="sort-by-completion" class="input">
+			<input type="button" value="Sort By: Date" id="sort-by-added" class="input">
+			<input type="button" value="Sort By: Status" id="sort-by-completion" class="input">
 			<p>Sorted By:</p>
 			<p id="sort-status">Added</p>
 		</section>
