--- a/index.html
+++ b/index.html
@@ -7,24 +7,130 @@
 </head>
 
 <body>
-	<header class="flex">
+	<section class="page">
+
+	<header class="flexRow">
 		<h1>Todo</h1>
 	</header>
 
-	<main class="flex">
-		<section id="input-section" class="flex">
+	<main class="flexColumn main">
+		<section id="input-section" class="flexRow">
 			<input type="text" id="task-details" placeholder="Task details" class="input">
 			<input type="button" value="Add Task" id="add-task" class="input">
+			<p>Sorted By:<span id="sort-status">Added</span></p>
+			
+		</section>
+
+		<section class="flexRow" id="sort-options">
 			<input type="button" value="Sort By: A-Z" id="sort-button" class="input">
 			<input type="button" value="Sort By: Date" id="sort-by-added" class="input">
 			<input type="button" value="Sort By: Status" id="sort-by-completion" class="input">
-			<p>Sorted By:</p>
-			<p id="sort-status">Added</p>
 		</section>
 		
-		<article id="todo-list" class="task-list flex">
+		<article id="todo-list" class="scroll flexColumn">
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete lore</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete </p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>This is firts task to complete</p>
+				<input type="button" value="Delete">
+			</section>
+			<section class="flexRow task">
+				<p>Thiste  lore</p>
+				<input type="button" value="Delete">
+			</section>
 		</article>
 	</main>
+	</section>
 </body>
 
 </html>
