Modify: rename id name from sort-status to sort-by

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             class="input"
           />
           <input type="button" value="Add Task" id="add-task" class="input" />
-          <p>Sorted By:<span id="sort-status">Added</span></p>
+          <p>Sorted By:<span id="sort-by">Added</span></p>
         </section>
 
         <section class="flexRow" id="sort-options">
