refactor: extract classes into separate file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
     <title>Todo Tasks</title>
+    <script src="./todo.js"></script>
+    <script src="./renderer.js"></script>
+    <script src="./todo-controller.js"></script>
     <script src="./todo-task.js"></script>
+    <script src="./task.js"></script>
     <link rel="stylesheet" href="task-style.css" />
   </head>
 
