rename: todo-task.js to todo-app.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Todo Tasks</title>
     <script src="script/todo.js"></script>
     <script src="script/renderer.js"></script>
-    <script src="script/todo-task.js"></script>
+    <script src="script/todo-app.js"></script>
     <script src="script/task.js"></script>
     <script src="script/todos.js"></script>
     <link rel="stylesheet" href="style.css" />
