fix: restoration of task from previous session

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="script/todo-app.js"></script>
     <script src="script/task.js"></script>
     <script src="script/todos.js"></script>
+    <script src="script/todo-app-storage.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
