add: serves page from server

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>Todo Tasks</title>
-    <script src="script/todo.js"></script>
-    <script src="script/renderer.js"></script>
-    <script src="script/todo-app.js"></script>
-    <script src="script/task.js"></script>
-    <script src="script/todos.js"></script>
-    <script src="script/todo-app-storage.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <script src="/script/todo.js"></script>
+    <script src="/script/renderer.js"></script>
+    <script src="/script/todo-app.js"></script>
+    <script src="/script/task.js"></script>
+    <script src="/script/todos.js"></script>
+    <script src="/script/todo-app-storage.js"></script>
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
@@ -21,9 +21,9 @@
           type="text"
           name="todo-title"
           id="todo-title"
-          placeholder="todo-title"
+          placeholder="New Todo Title"
         />
-        <input type="button" value="create" id="create-todo" />
+        <input type="button" value="Create" id="create-todo" />
       </section>
 
       <section id="todos"></section>
