refactor: improve todos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="/script/task.js"></script>
     <script src="/script/todos.js"></script>
     <script src="/script/todo-app-storage.js"></script>
+    <script src="/script/todos-controller.js"></script>
     <link rel="stylesheet" href="/style.css" />
   </head>
 
