change: move client side files to public

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <title>Todo Tasks</title>
-    <script src="/script/todo.js"></script>
-    <script src="/script/renderer.js"></script>
-    <script src="/script/todo-app.js"></script>
-    <script src="/script/task.js"></script>
-    <script src="/script/todos.js"></script>
-    <script src="/script/todo-app-storage.js"></script>
-    <script src="/script/todos-controller.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <script src="/scripts/todo.js"></script>
+    <script src="/scripts/renderer.js"></script>
+    <script src="/scripts/todo-app.js"></script>
+    <script src="/scripts/task.js"></script>
+    <script src="/scripts/todos.js"></script>
+    <script src="/scripts/todo-app-storage.js"></script>
+    <script src="/scripts/todos-controller.js"></script>
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
 
   <body>
