add: feature to serve addTodo request from server

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="/scripts/todos.js"></script>
     <script src="/scripts/todo-app-storage.js"></script>
     <script src="/scripts/todos-controller.js"></script>
+    <script src="/scripts/web-client.js"></script>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
 
