refactor: implement emoji for add and delete

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           id="todo-title"
           placeholder="New Todo Title"
         />
-        <input type="button" value="Create" id="create-todo" />
+        <input type="button" value="＋" id="create-todo" />
       </section>
 
       <section id="todos"></section>
